Various fixes.